<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainActivity2Layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity2">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_input_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/museosans_300"
                android:text="@string/email_input"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <AutoCompleteTextView
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/email_input_hint"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColorHint="#78909C"
                android:textSize="24sp"
                android:importantForAutofill="no"
                android:completionThreshold="2"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/password_input_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/museosans_300"
                android:text="@string/password_input"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/password_input_hint"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="#78909C"
                android:textSize="24sp"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/password_confirm_input_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/museosans_300"
                android:text="@string/password_confirm"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/password_confirm_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/password_confirm_hint"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="#78909C"
                android:textSize="24sp"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/password_criteria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/museosans_300"
                android:text="@string/password_criteria"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:onClick="WipeData"
                android:id="@+id/wipe_server_data_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/teal_200"
                android:text="@string/wipe_server_data" />
        </LinearLayout>
    </ScrollView>

    <android.widget.Button
        android:onClick="RegisterInfo"
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museosans_300"
        android:text="@string/create_account_done_btn"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>