<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainActivityLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_green_flag"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="284dp"
            android:fontFamily="@font/museosans_500"
            android:text="@string/desc1"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tick1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/tick_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc1"
            app:srcCompat="@drawable/tick" />

        <TextView
            android:id="@+id/desc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/museosans_300"
            android:text="@string/desc2"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tick1"
            app:layout_constraintStart_toEndOf="@+id/tick1"
            app:layout_constraintTop_toTopOf="@+id/tick1"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/tick2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/tick_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tick1"
            app:srcCompat="@drawable/tick" />

        <TextView
            android:id="@+id/desc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/museosans_300"
            android:text="@string/desc3"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tick2"
            app:layout_constraintStart_toEndOf="@+id/tick2"
            app:layout_constraintTop_toTopOf="@+id/tick2"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/tick3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/tick_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tick2"
            app:srcCompat="@drawable/tick" />

        <TextView
            android:id="@+id/desc4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/museosans_300"
            android:text="@string/desc4"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tick3"
            app:layout_constraintStart_toEndOf="@+id/tick3"
            app:layout_constraintTop_toTopOf="@+id/tick3"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <android.widget.Button
        android:onClick="CreateAccount"
        android:id="@+id/create_account_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create_account_btn"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/museosans_300"
        android:textAllCaps="false"
        android:background="@drawable/gradient_button_background"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>